[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Images/rope.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Rope.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="CapsuleShape2D" id=2]

[node name="Rope" type="StaticBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )
min_modulate = Color( 0.713726, 0.447059, 0.301961, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PinJoint2D" type="PinJoint2D" parent="CollisionShape2D"]
node_a = NodePath("../..")
node_b = NodePath("ChainPiece")

[node name="ChainPiece" type="RigidBody2D" parent="CollisionShape2D/PinJoint2D"]
position = Vector2( 0, 24 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/PinJoint2D/ChainPiece"]
shape = SubResource( 2 )

[node name="PinJoint2D" type="PinJoint2D" parent="CollisionShape2D/PinJoint2D/ChainPiece/CollisionShape2D"]
node_a = NodePath("../..")
node_b = NodePath("ChainPiece2")
bias = 0.9
softness = 0.1

[node name="Sprite" type="Sprite" parent="CollisionShape2D/PinJoint2D/ChainPiece/CollisionShape2D/PinJoint2D"]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )

[node name="ChainPiece2" type="RigidBody2D" parent="CollisionShape2D/PinJoint2D/ChainPiece/CollisionShape2D/PinJoint2D"]
position = Vector2( 0, 24 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/PinJoint2D/ChainPiece/CollisionShape2D/PinJoint2D/ChainPiece2"]
shape = SubResource( 2 )

[node name="PinJoint2D" type="PinJoint2D" parent="CollisionShape2D/PinJoint2D/ChainPiece/CollisionShape2D/PinJoint2D/ChainPiece2/CollisionShape2D"]
node_a = NodePath("../..")
node_b = NodePath("ChainPiece3")
bias = 0.9
softness = 0.1

[node name="Sprite" type="Sprite" parent="CollisionShape2D/PinJoint2D/ChainPiece/CollisionShape2D/PinJoint2D/ChainPiece2/CollisionShape2D/PinJoint2D"]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )

[node name="ChainPiece3" type="RigidBody2D" parent="CollisionShape2D/PinJoint2D/ChainPiece/CollisionShape2D/PinJoint2D/ChainPiece2/CollisionShape2D/PinJoint2D"]
position = Vector2( 0, 24 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/PinJoint2D/ChainPiece/CollisionShape2D/PinJoint2D/ChainPiece2/CollisionShape2D/PinJoint2D/ChainPiece3"]
shape = SubResource( 2 )

[node name="PinJoint2D" type="PinJoint2D" parent="CollisionShape2D/PinJoint2D/ChainPiece/CollisionShape2D/PinJoint2D/ChainPiece2/CollisionShape2D/PinJoint2D/ChainPiece3/CollisionShape2D"]
node_a = NodePath("../..")
bias = 0.9
softness = 0.1

[node name="Sprite" type="Sprite" parent="CollisionShape2D/PinJoint2D/ChainPiece/CollisionShape2D/PinJoint2D/ChainPiece2/CollisionShape2D/PinJoint2D/ChainPiece3/CollisionShape2D/PinJoint2D"]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
